# state-sped-policy-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DATA_COLLECTION_STATUS.md  LICENSE  README.md  README_old.md  pyproject.toml  pytest.ini  ruff.toml
.claude/agents/: refactor-python.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
code/: __init__.py  config.py
code/analysis/: __init__.py  covid_analysis.py  data_validation.py  detailed_policy_report_generator.py  instrumental_variables.py  panel_setup.py  policy_database.py  publication_generator.py  robustness_testing.py  simple_iv_analysis.py  simple_robustness.py  staggered_did.py
code/cleaning/: __init__.py  base_loader.py  config.py  data_integration.py  data_loaders.py  data_validation.py  panel_creator.py  utils.py
code/collection/: __init__.py  base_collector.py  census_collector.py  census_data_parser.py  census_file_downloader.py  common.py  edfacts_collector.py  naep_collector.py  ocr_collector.py
code/validation/: monitor_naep_collection.py  naep_data_validator.py
code/visualization/: __init__.py  base.py  config.py  event_study_plots.py  treatment_dashboard.py  utils.py
data/reports/: naep_validation_report.txt  validation_report.txt
docs/: state-sped-policy-eval.md
docs/prds/: covid-analysis-prd.md  data-collection-prd.md  implementation-prd.md  policy-database-prd.md  project-overview-prd.md  research-methodology-prd.md
examples/: api_key_usage.py  demo_reporting.py
output/: causal_analysis_report.md  descriptive_analysis_report.md  robustness_analysis_report.md
output/briefs/: policy_brief.tex
output/dashboards/: analysis_dashboard.html
output/diagnostics/: comprehensive_diagnostic_report.md  (+1 more)
scripts/: collect_real_data.py  integrate_real_data.py  use_existing_real_data.py
src/: config.py  conftest.py
tests/: conftest.py
(+166 files in other folders)
