[project]
name = "state-sped-policy-eval"
version = "0.1.0"
description = "Quasi-experimental analysis of state-level special education policies and their impact on student outcomes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Econometric analysis
    "statsmodels>=0.14.0",
    "linearmodels>=5.0.0",
    "econtools>=0.3.0",
    # Difference-in-differences using statsmodels and linearmodels
    # Note: Using manual DiD implementation instead of 'did' package due to dependency issues
    # API requests and web scraping
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    # Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    # Data export/import
    "openpyxl>=3.1.0",
    # Environment configuration
    "python-dotenv>=1.0.0",
    # Machine learning (for extensions)
    "scikit-learn>=1.3.0",
    # Statistical tests and robustness
    "pyrddl>=0.1.0",
    # Optional: Jupyter support
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    # Type hints
    "typing-extensions>=4.0.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    # Code formatting and linting - using ruff instead of flake8/black/isort
    "ruff>=0.12.8",
    "mypy>=1.0.0",
    
    # Testing framework and coverage
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-httpx>=0.21.0",
    "pytest-xdist>=3.0.0",
    
    # Test data and property-based testing
    "factory-boy>=3.2.0",
    "hypothesis>=6.0.0",
]

docs = [
    "pandoc>=2.0.0",
]

advanced = [
    # For synthetic control methods - use manual implementation instead
    # "synthdid>=0.1.0",  # Package has build issues
    
    # For Bayesian analysis (optional extensions)
    "pymc>=5.0.0",
    "arviz>=0.15.0",
    
    # For network analysis
    "networkx>=3.0.0",
    
    # For text analysis of legislation
    "transformers>=4.20.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]


